@@ -11,6 +11,8 @@
 - replaced `$.hostname` property with a method in the Schema/Auth Options
 - __critital__ fixed cloning buffers in the `FlowStream`
 - improved user-agent parser
+- added `FILESTORAGE().clone(id, newid, [callback])` method
+- fixed `FILESTORAGE().copy(id, newid, [callback])` method
 
 ========================
 0.0.8
